--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -1,19 +1,14 @@
 FROM node:18
 
-# Install development tools
-RUN apt-get update && apt-get install -y \
-    git \
-    vim \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
-
 WORKDIR /app
 
 # Copy package files
 COPY frontend/package*.json ./
 
-# Install dependencies
-RUN npm install
+# Install dependencies and types
+RUN npm install && \
+    npm install --save-dev @types/react @types/react-dom @types/node && \
+    npm install --save lucide-react
 
 # Start development server
 CMD ["npm", "start"]
