--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
       "@types/react": "^18.2.47",
       "@types/react-dom": "^18.2.18",
       "axios": "^1.6.5",
-      "lucide-react": "^0.263.1",
+      "lucide-react": "^0.284.0",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-scripts": "5.0.1",
@@ -60,7 +60,10 @@
       "@testing-library/react": "^14.2.1",
       "@testing-library/user-event": "^14.5.2",
       "jest": "^29.7.0",
-      "jest-environment-jsdom": "^29.7.0"
+      "jest-environment-jsdom": "^29.7.0",
+      "@types/node": "^20.11.24",
+      "@types/react": "^18.2.61",
+      "@types/react-dom": "^18.2.19"
     },
     "jest": {
       "collectCoverageFrom": [
