--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,5 +1,5 @@
 [alembic]
-script_location = migrations
+script_location = alembic
 # We'll set this in env.py using environment variables
 sqlalchemy.url = driver://user:pass@localhost/dbname
 
