--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,9 +38,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    command: >
-      sh -c "alembic upgrade head &&
-             uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
+    command: sh /app/scripts/start.sh
 
   db:
     image: postgres:14-alpine
